[package]
name = "rust-ssp-boilerplate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version =  "4.0", default-features = false, features = ["rustls", "macros"] }
reqwest = {version = "0.11", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.193", features = ["derive"] }
actix-cors = "0.6.4"
url = "2.2.2"
